feat(ZombieType.java): added some zombies